MouseLook (actuator) triggers MouseMovement (sensor) on other objects permanently #43980

Closed
opened 2015-03-12 23:14:19 +01:00 by Hugo Barreira · 5 comments

System Information
Win 7, nvidia GT425

Blender Version
2.73a 'bbf09d9' official version
also on 2.74 testbuild ed5df50

Short description of error
Once the MouseLook actuator is triggered for the 1st time using a MouseMovement sensor or a Always sensor,
any other MouseMovement sensor on any other object is acting like if the mouse is moving even when it's not.

Steps to reproduce the error

  • start game engine on the blender file attached.
  • move the mouse and stop, the cube should stop rotating but it continues to rotate.
  • deactivate the sensor connected to the mouse look actuator on the camera object, start game engine again and move the mouse. The cube only rotates when the mouse moves has expected.

MouseLook_act_bug.blend

**System Information** Win 7, nvidia GT425 **Blender Version** 2.73a 'bbf09d9' official version also on 2.74 testbuild ed5df50 **Short description of error** Once the MouseLook actuator is triggered for the 1st time using a MouseMovement sensor or a Always sensor, any other MouseMovement sensor on any other object is acting like if the mouse is moving even when it's not. **Steps to reproduce the error** - start game engine on the blender file attached. - move the mouse and stop, the cube should stop rotating but it continues to rotate. - deactivate the sensor connected to the mouse look actuator on the camera object, start game engine again and move the mouse. The cube only rotates when the mouse moves has expected. [MouseLook_act_bug.blend](https://archive.blender.org/developer/F150320/MouseLook_act_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Jorge Bernal was assigned by Hugo Barreira 2015-03-12 23:14:19 +01:00
Author

Added subscriber: @HugoBarreira

Added subscriber: @HugoBarreira
Member

I confirm the bug

I confirm the bug
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 73ad769

Thanks for reporting

Closed by commit 73ad769 Thanks for reporting
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43980
No description provided.